; ModuleID = '/home/carl/AnghaBench/linux/net/nfc/hci/extr_command.c_nfc_hci_execute_cb.c'
source_filename = "/home/carl/AnghaBench/linux/net/nfc/hci/extr_command.c_nfc_hci_execute_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.hcp_exec_waiter = type { i32, i32, i32, %struct.sk_buff* }

@.str = private unnamed_addr constant [34 x i8] c"HCI Cmd completed with result=%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.sk_buff*, i32)* @nfc_hci_execute_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nfc_hci_execute_cb(i8* %0, %struct.sk_buff* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sk_buff*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.hcp_exec_waiter*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.hcp_exec_waiter*
  store %struct.hcp_exec_waiter* %9, %struct.hcp_exec_waiter** %7, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @pr_debug(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = load i32, i32* %6, align 4
  %13 = load %struct.hcp_exec_waiter*, %struct.hcp_exec_waiter** %7, align 8
  %14 = getelementptr inbounds %struct.hcp_exec_waiter, %struct.hcp_exec_waiter* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 8
  %15 = load %struct.hcp_exec_waiter*, %struct.hcp_exec_waiter** %7, align 8
  %16 = getelementptr inbounds %struct.hcp_exec_waiter, %struct.hcp_exec_waiter* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = icmp eq i32 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %3
  %20 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %21 = load %struct.hcp_exec_waiter*, %struct.hcp_exec_waiter** %7, align 8
  %22 = getelementptr inbounds %struct.hcp_exec_waiter, %struct.hcp_exec_waiter* %21, i32 0, i32 3
  store %struct.sk_buff* %20, %struct.sk_buff** %22, align 8
  br label %26

23:                                               ; preds = %3
  %24 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %25 = call i32 @kfree_skb(%struct.sk_buff* %24)
  br label %26

26:                                               ; preds = %23, %19
  %27 = load %struct.hcp_exec_waiter*, %struct.hcp_exec_waiter** %7, align 8
  %28 = getelementptr inbounds %struct.hcp_exec_waiter, %struct.hcp_exec_waiter* %27, i32 0, i32 1
  store i32 1, i32* %28, align 4
  %29 = load %struct.hcp_exec_waiter*, %struct.hcp_exec_waiter** %7, align 8
  %30 = getelementptr inbounds %struct.hcp_exec_waiter, %struct.hcp_exec_waiter* %29, i32 0, i32 2
  %31 = load i32, i32* %30, align 8
  %32 = call i32 @wake_up(i32 %31)
  ret void
}

declare dso_local i32 @pr_debug(i8*, i32) #1

declare dso_local i32 @kfree_skb(%struct.sk_buff*) #1

declare dso_local i32 @wake_up(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
